force-app/main/default/objects/breg_Form_Configuration_Item__c/breg_Form_Configuration_Item__c.object-meta.xml
<CustomObject>
    <label>Form Configuration Item</label>
    <nameField>
        <displayFormat>FCI-{00000}</displayFormat>
        <label>Form Configuration Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Configuration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>