force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_APEX_Validation_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_APEX_Validation_Class_Name__c</fullName>
    <label>APEX Validation Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>