force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Component_Name__c</fullName>
    <label>Component Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Applicant Type</fullName>
            </value>
            <value>
                <fullName>Certificate of Good Standing</fullName>
            </value>
            <value>
                <fullName>Classification</fullName>
            </value>
            <value>
                <fullName>Company Name</fullName>
            </value>
            <value>
                <fullName>Date Incorporated</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
            <value>
                <fullName>Entity Type</fullName>
            </value>
            <value>
                <fullName>Formed On</fullName>
            </value>
            <value>
                <fullName>Goods Or Services</fullName>
            </value>
            <value>
                <fullName>Input Date</fullName>
            </value>
            <value>
                <fullName>Input Text</fullName>
            </value>
            <value>
                <fullName>Input Textarea</fullName>
            </value>
            <value>
                <fullName>Input Number</fullName>
            </value>
            <value>
                <fullName>Liability Of Members</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Members Radio</fullName>
            </value>
            <value>
                <fullName>Member Type</fullName>
            </value>
            <value>
                <fullName>Members Change</fullName>
            </value>
            <value>
                <fullName>Nature Of Business</fullName>
            </value>
            <value>
                <fullName>Optional Provisions</fullName>
            </value>
            <value>
                <fullName>Output Text</fullName>
            </value>
            <value>
                <fullName>Partnership Name</fullName>
            </value>
            <value>
                <fullName>Period Of Duration</fullName>
            </value>
            <value>
                <fullName>Profit</fullName>
            </value>
            <value>
                <fullName>Registered Agent</fullName>
            </value>
            <value>
                <fullName>Registration Type</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>