force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Component_Settings__c.field-meta.xml
<CustomField>
    <fullName>breg_Component_Settings__c</fullName>
    <label>Component Settings</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>