force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Component_Visibility_Rules__c.field-meta.xml
<CustomField>
    <fullName>breg_Component_Visibility_Rules__c</fullName>
    <label>Component Visibility Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>