force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Configuration__c</fullName>
    <label>Form Configuration</label>
    <referenceTo>breg_Form_Configuration__c</referenceTo>
    <relationshipLabel>Form Configuration Items</relationshipLabel>
    <relationshipName>breg_Form_Configuration_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>