force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Is_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal Only</label>
    <type>Checkbox</type>
</CustomField>