force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Label_Override_2__c.field-meta.xml
<CustomField>
    <fullName>breg_Label_Override_2__c</fullName>
    <inlineHelpText>This field is used to override label of the first input field</inlineHelpText>
    <label>Label Override 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>