force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>breg_Label_Override__c</fullName>
    <inlineHelpText>This field is used to override title of the component. Supports constant LABEL_HIDDEN to hide component label,</inlineHelpText>
    <label>Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>