force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Label_Override_Long2__c.field-meta.xml
<CustomField>
    <fullName>breg_Label_Override_Long2__c</fullName>
    <label>Label Override Long 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>