force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Label_Override_Long__c.field-meta.xml
<CustomField>
    <fullName>breg_Label_Override_Long__c</fullName>
    <inlineHelpText>This field is used to specify some text that can be displayed in a component. For ex. Signature.</inlineHelpText>
    <label>Label Override Long</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>