force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Order__c.field-meta.xml
<CustomField>
    <fullName>breg_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>