force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Required_for_Statuses__c.field-meta.xml
<CustomField>
    <fullName>breg_Required_for_Statuses__c</fullName>
    <label>Required for Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejectied</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>