force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Source_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>breg_Source_Fields_Mapping__c</fullName>
    <label>Source Fields Mapping</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>