force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Target_Default_Values__c.field-meta.xml
<CustomField>
    <fullName>breg_Target_Default_Values__c</fullName>
    <label>Target Default Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>