force-app/main/default/objects/breg_Form_Configuration_Item__c/fields/breg_Target_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>breg_Target_Fields_Mapping__c</fullName>
    <inlineHelpText>Specifies the target field where values should be saved. The format is ObjectApiName.FieldApiName</inlineHelpText>
    <label>Target Fields Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>